--- a/index.html
+++ b/index.html
@@ -76,17 +76,17 @@ body.print-mode #counter {
 
 <body tabindex="0">
 
-<div class="slide active"><iframe src="slides/page1.html"></iframe></div>
-<div class="slide"><iframe src="slides/page2.html"></iframe></div>
-<div class="slide"><iframe src="slides/page3.html"></iframe></div>
-<div class="slide"><iframe src="slides/page4.html"></iframe></div>
-<div class="slide"><iframe src="slides/page5.html"></iframe></div>
-<div class="slide"><iframe src="slides/page6.html"></iframe></div>
-<div class="slide"><iframe src="slides/page7.html"></iframe></div>
-<div class="slide"><iframe src="slides/page8.html"></iframe></div>
-<div class="slide"><iframe src="slides/page9.html"></iframe></div>
-<div class="slide"><iframe src="slides/page10.html"></iframe></div>
-<div class="slide"><iframe src="slides/page11.html"></iframe></div>
+<div class="slide active"><iframe src="page1.html"></iframe></div>
+<div class="slide"><iframe src="page2.html"></iframe></div>
+<div class="slide"><iframe src="page3.html"></iframe></div>
+<div class="slide"><iframe src="page4.html"></iframe></div>
+<div class="slide"><iframe src="page5.html"></iframe></div>
+<div class="slide"><iframe src="page6.html"></iframe></div>
+<div class="slide"><iframe src="page7.html"></iframe></div>
+<div class="slide"><iframe src="page8.html"></iframe></div>
+<div class="slide"><iframe src="page9.html"></iframe></div>
+<div class="slide"><iframe src="page10.html"></iframe></div>
+<div class="slide"><iframe src="page11.html"></iframe></div>
 
 <div id="progress"></div>
 <div id="counter"></div>
@@ -175,3 +175,4 @@ if(printMode){
 
 </body>
 </html>
+
